--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "author": "Enrico Marino <enrico.marino@email.com> (onirame.no.de)"
   , "name": "json-validate"
-  , "description": "JavaScript fast json schema validation library"
+  , "description": "JavaScript json schema validation library"
   , "version": "0.1.0"
   , "homepage": "https://github.com/onirame/json-validate"
   , "repository": {
